--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <HTML>
 <HEAD>
 
-<TITLE>Fundamentals and Trends in Vision and Image Processing</TITLE>
+<TITLE>Fundamentos e tendências em visão e processamento de imagensg</TITLE>
 
 </HEAD>
 
@@ -9,69 +9,50 @@
 
 <CENTER>
 <H1>
-Fundamentals and Trends in Vision and Image Processing
-</H1>
+Fundamentos e tendências em visão e processamento de imagens
+ </H1>
 <H2><I>
-2020: The Year of Deep Video
+2020: Entendendo os avanços recentes e o que está por vir
 </I>
 </H2>
 <P>
 <H3>
-August-November
+Outubro - Dezembro
 </H3>
 </CENTER>
 
 <P><HR>
 
-<H3>About the Course</H3>
+<H3>ASobre o grupo de estudo</H3>
 <UL>
 
 <LI>  <a href=http://www.visgraf.impa.br/Courses/ipcg.html>
-General Information</a>
+Inspirado neste curso criado pelo IMPA</a>
 
-<LI> Instructor: <A HREF=http://www.impa.br/~lvelho>
+<LI> Autor Original: <A HREF=http://www.impa.br/~lvelho>
 Luiz Velho</a>
 
-<LI> TA: 
-<A HREF="mailto:daniel.yukimura@gmail.com">
-Daniel Yukimura
+<LI> Adaptado por: 
+<A HREF="mailto:pedroarthur@nca.ufma.br">
+Pedro Arthur
 </A>
 
-<!--
-<LI> Support:
-<A HREF="mailto:dlucio@impa.br">
-Djalma Lucio
-</a> 
--->
 
-<LI> Classes:
+<LI> Encontros:
 <br>
-Tuesdays and Thursdays, 13:30 to 15:00 (online)
+Todas as sextas às 14:00 (online)
 
-<LI> Lab Practice (subject to schedule):
-<br>
-Mondays, 15:00 to 16:30 (online)
-
-<br><p>
-<LI> Registration:
-IMPA website 
-<br>
-(<a href=https://impa.br/en_US/ensino/>Online System Access</a>)
-
-<LI> Student Evaluation
-<br>
-<a href=http://lvelho.impa.br/ip20/eval.html>Methodology</a>
 
 </UL>
 
 <P><HR>
 
-<H3>Course Material</H3>
+<H3>Material do curso</H3>
 
 <UL>
 
 <p>
-<LI> <a href=reading.html>Reading </a>
+<LI> <a href=reading.html>Leitura </a>
 <p>
 <LI> <a href=./software/index.html> Software </a>
 
@@ -79,58 +60,45 @@ IMPA website
 
 <P><HR>
 
-<H3>Lectures</H3>
+<H3>Aulas</H3>
 
 <UL>
-<LI> <a href=lectures/schedule.html> Schedule </a>
+
 <LI> <a href=https://www.youtube.com/playlist?list=PLo4jXE-LdDTRaFa39TdNN3FgPAKkcuHvj>
-Lecture Videos </a>
+Playlist </a>
 <br><br>
-<LI> <a href=lectures/books.html> Reading Material </a>
+<LI> <a href=lectures/books.html> Livros texto </a>
 </UL> 
 
 
 
 <P><HR>
-<H3>Coursework</H3>
+<H3>Desafios</H3>
 
 <UL>
-<LI> <a href=./assgn/assgn.html> Assignments</a>
+<LI> <a href=./assgn/assgn.html> Projetos</a>
 <LI> <a href=https://www.youtube.com/playlist?list=PLo4jXE-LdDTQcBos0a0olX9BPxdgmDqKJ>
 Lab Classes Videos </a>
 <br><br>
-<LI> <a href=./proj/index.html> Project Topics </a>
-<!--
-<p>
-<LI> <a href=./proj/presentations.html> Presentations </a>
-<LI> <a href=./proj/slides.html> Slides </a>
--->
+<LI> <a href=./proj/index.html> Indicações de Tópicos </a>
+
 </UL>
 
-<!--
-<P><HR>
-<H3>Results</H3>
-<UL>
-<LI> <a href=demos> Demos </a>
-<LI> <a href=stud.html> Students </a>
-</UL>
--->
+
 
 
 <P><HR>
-<H3> Resources </H3>
+<H3> Outros recursos importantes </H3>
 
 <UL>
-<LI> <a href=software/software.html> Other Software </a>
+<LI> <a href=software/software.html> Softwares auxiliares </a>
 <LI> <a href=resources.html> Links </a>
-<LI> <a href=courses.html> Elsewhere </a>
-<LI> <a href=etc.html> Etc.. </a>
+<LI> <a href=courses.html> Notícias </a>
+
 </UL>
 
 
 <P><HR>
-<b>Copyright &copy; 2020
-<A HREF="http://www.impa.br/~lvelho/">Luiz Velho</a>
-</b>
+
 </BODY>
 </HTML>
