--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <HTML>
 <HEAD>
 
-<TITLE>Fundamentos e tendências em visão e processamento de imagensg</TITLE>
+<TITLE>Fundamentos e tendências em visão e processamento de imagens</TITLE>
 
 </HEAD>
 
