add leituras e organizando index

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>ClearMinimalist</title>
+<title>Estudos em Visão Computacional 2020-2021</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link href="style.css" rel="stylesheet" type="text/css" />
 <script type="text/javascript" src="js/jquery-1.3.2.min.js"></script>
@@ -25,53 +25,51 @@ $(document).ready(function(){
 <div class="main">
   <div class="main_resize">
     <div class="main_left">
-      <div class="logo"><h1>Estudos em PI e CV</h1></div>
+      <div class="logo">
+        <h1 style="font-weight:bolder;">Estudos em Visão Computacional</h1>
+        <h2 style="font-weight:bold;">2020-2021</h2>
+      </div>
       <div class="clr"></div>
       <div class="menu">
         <ul>
           <li><a href="index.html" class="active"><span>Semana 1</span></a></li>
-          <li><a href="semana2.html"><span>Semana 2</span></a></li>
+          <li><a href="leituras.html"><span>Leituras</span></a></li>
         </ul>
       </div>
       <div class="clr"></div>
       <h2>&nbsp;</h2>
       <h2>Últimas atualizações</h2>
-      <p><span>12 Dec 2015 | 0 comments</span><br />
-        <strong>Duis nec porttitor lorem</strong><br />
-        Mauris et nisi urna nonfaucibus magna. Integer lacus ante then ullamcorper ut vulputate..</p>
-      <p><span>14 Dec 2015 | 0 comments</span><br />
-        <strong>Duis nec porttitor lorem</strong><br />
-        Mauris et nisi urna nonfaucibus magna. Integer lacus ante then ullamcorper ut vulputate..</p>
+      <p><span>16 Out 2020</span><br />
+        <strong>Começando os Trabalhos</strong><br />
+        Começamos os trabalhos e separamos o primeiro material com o fim de nivelar os participantes. Foram passados materiais de Python e Panorâmas da área.</p>
+
       
     </div>
     <div class="main_right">
       <div class="clr"></div>
       <div class="clr"></div>
-      <h2 style="padding:30px 0 5px 5px;">Welcome to Company.<br />
-        <span> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor</span> </h2>
-      <p class="grey">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium mque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <h2 style="padding:30px 0 5px 5px;font-weight: 700;">Welcome to Company.<br />
+      <p class="grey">Aqui se encontra o registro do material organizado para iniciantes nas áreas de Visão Computacional e Processamento de Imagens. Este guia foi organizado por um grupo de estudantes do LabVip, um laboratório de Visão situado na Universidade Federal do Maranhão. Todo o material tem como base a disciplina de Processsamento de Imagens oferecida pelo IMPA e vamos tentar mantê-lo atualizado na medida do possível.</p>
       <div class="main_right_bg">
-        <div class="blog"> <img src="images/img_1.jpg" class="floated" border="0" alt="" />
-          <p><strong>Fusce vehicula dignissim <br />
-            ligula.</strong> Vestibulum sit amet neque eu neque suscipit consequat quis vel risus. <a href="#">Continue Reading »</a></p>
+        <div class="blog">
+          <p><strong>1. Panorâma da Área</p>
+            <ul>
+              <li><a href="https://www.youtube.com/watch?v=Bd0PCypQ44s" target="_blank">Aula 01- IMPA</a>: ótima introdução à área em português.</li>
+              <li><a href="https://www.youtube.com/playlist?list=PLiaHhY2iBX9ihLasvE8BKnS2Xg8AhY6iV" target="_blank">Learning How to See</a>: material introdutório em inglês que deve ser assistido.</li>
+            </ul>
         </div>
-        <div class="blog"> <img src="images/img_2.jpg" class="floated" border="0" alt="" />
-          <p><strong>Fusce vehicula dignissim <br />
-            ligula.</strong> Vestibulum sit amet neque eu neque suscipit consequat quis vel risus. <a href="#">Continue Reading »</a></p>
-        </div>
-        <div class="blog"> <img src="images/img_3.jpg" class="floated" border="0" alt="" />
-          <p><strong>Fusce vehicula dignissim <br />
-            ligula.</strong> Vestibulum sit amet neque eu neque suscipit consequat quis vel risus. <a href="#">Continue Reading »</a></p>
-        </div>
-        <div class="blog"> <img src="images/img_4.jpg" class="floated" border="0" alt="" />
-          <p><strong>Fusce vehicula dignissim <br />
-            ligula.</strong> Vestibulum sit amet neque eu neque suscipit consequat quis vel risus. <a href="#">Continue Reading »</a></p>
+        <div class="blog">
+          <p><strong>1. Panorâma da Área</p>
+            <ul>
+              <li><a href="https://www.youtube.com/watch?v=Bd0PCypQ44s" target="_blank">Aula 01- IMPA</a>: ótima introdução à área em português.</li>
+              <li><a href="https://www.youtube.com/playlist?list=PLiaHhY2iBX9ihLasvE8BKnS2Xg8AhY6iV" target="_blank">Learning How to See</a>: material introdutório em inglês que deve ser assistido.</li>
+            </ul>
         </div>
         <div class="clr"></div>
       </div>
-      <p class="grey"><em>Vestibulum vehicula purus nec dui accumsan fermentum. Suspendisse potenti. Ut dapibus est id odio pretium blandit in eget leo. Aliquam erat volutpat. </em></p>
-      <h2>What we offer</h2>
-      <p class="grey">Nunc urna eros, viverra sit amet tempor non, aliquam sit amet felis. Suspendisse potenti. Mauris sed lectus at sem hendrerit condimentum. Donec pellentesque ligula pharetra dui lacinia nec tempor leo feugiat. Mauris vitae sapien tellus, vel consequat libero. Vivamus posuere</p>
+      <p class="grey"><em>O interessante é que você consuma o material na ordem indicada, mas sinta-se a vontade para pular o que for fácil demais para você. Se você não conseguir entender a prática em uma semana não tem problema. </em></p>
+      <h2>Observações</h2>
+      <p class="grey">Em breve</p>
       <p>&nbsp;</p>
       <p>&nbsp;</p>
     </div>
