--- a/leituras.html
+++ b/leituras.html
@@ -59,10 +59,10 @@ $(document).ready(function(){
             </ul>
         </div>
         <div class="blog">
-          <p><strong>1. Panorâma da Área</p>
+          <p><strong>2. Ferramentas do Python</p>
             <ul>
-              <li><a href="https://www.youtube.com/watch?v=Bd0PCypQ44s" target="_blank">Aula 01- IMPA</a>: ótima introdução à área em português.</li>
-              <li><a href="https://www.youtube.com/playlist?list=PLiaHhY2iBX9ihLasvE8BKnS2Xg8AhY6iV" target="_blank">Learning How to See</a>: material introdutório em inglês que deve ser assistido.</li>
+              <li><a href="https://pandas.pydata.org/pandas-docs/stable/getting_started/tutorials.html" target="_blank">Pandas</a>: tutorial oficial. Não precisa passar por tudo, faz o "Getting started tutorials" e aprende o resto depois enquanto programa.</li>
+              <li><a href="https://www.youtube.com/playlist?list=PLiaHhY2iBX9ihLasvE8BKnS2Xg8AhY6iV" target="_blank">Data analysys in Python</a>: o melhor material gratuito que já encontrei.</li>
             </ul>
         </div>
         <div class="clr"></div>
